--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "typescript",
     "maps"
   ],
-  "author": "Your Name",
+  "author": "MIERUNE Inc.",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourusername/maplibre-gl-mock-geolocate.git"
+    "url": "https://github.com/MIERUNE/maplibre-gl-mock-geolocate.git"
   },
   "peerDependencies": {
     "maplibre-gl": "^3.0.0 || ^4.0.0 || ^5.0.0"
