feat: add MapLibre GL JS dependencies
- Add maplibre-gl ^5.7.1 as devDependency for development
- Add maplibre-gl >=5.0.0 as peerDependency for users
- Add @types/geojson for TypeScript support
- Install all dependencies with pnpm

--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
     "build": "tsc --noEmit && vite build",
     "preview": "vite preview"
   },
+  "peerDependencies": {
+    "maplibre-gl": ">=5.0.0"
+  },
   "devDependencies": {
+    "@types/geojson": "^7946.0.15",
+    "maplibre-gl": "^5.7.1",
     "typescript": "~5.8.3",
     "vite": "^7.1.2"
   }
