feat: add GitHub Pages deployment setup for demo
- Configure Vite for dual mode (library + demo) builds
- Add GitHub Actions workflow for automatic deployment
- Add build:demo and preview:demo scripts
- Update .gitignore to exclude demo-dist directory

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "build:demo": "vite build --mode demo",
+    "preview": "vite preview",
+    "preview:demo": "vite preview --outDir demo-dist"
   },
   "peerDependencies": {
     "maplibre-gl": ">=5.0.0"
