--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,6 +27,7 @@ jobs:
         uses: pnpm/action-setup@v4
         with:
           version: 9
+          standalone: true
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
