--- a/package.json
+++ b/package.json
@@ -53,12 +53,13 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.5",
+    "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "husky": "^9.1.7",
-    "jsdom": "^27.0.0",
     "lint-staged": "^16.2.3",
     "maplibre-gl": "^5.7.1",
+    "playwright": "^1.55.1",
     "typescript": "~5.8.3",
     "vite": "^7.1.2",
     "vite-plugin-dts": "^4.5.4",
