fix: add SSR support with conditional exports and Node.js stub
- Created SSR-safe stub (index.ssr.ts) that doesn't import maplibre-gl
- Updated vite.config.lib.ts to build both browser and SSR versions
- Added conditional exports in package.json (node, browser, default)
- Users no longer need to configure Vite ssr.noExternal
- SSR stub prevents import errors while maintaining type safety

--- a/package.json
+++ b/package.json
@@ -29,10 +29,17 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
+      "node": {
+        "import": "./dist/maplibre-gl-manual-geolocate.ssr.js",
+        "require": "./dist/maplibre-gl-manual-geolocate.ssr.cjs"
+      },
+      "browser": "./dist/maplibre-gl-manual-geolocate.js",
       "import": "./dist/maplibre-gl-manual-geolocate.js",
-      "require": "./dist/maplibre-gl-manual-geolocate.umd.cjs"
+      "require": "./dist/maplibre-gl-manual-geolocate.umd.cjs",
+      "default": "./dist/maplibre-gl-manual-geolocate.js"
     }
   },
+  "sideEffects": false,
   "scripts": {
     "dev": "vite",
     "build": "tsc --noEmit && vite build --config vite.config.lib.ts",
